Colaboratory를 통해 생성됨

--- a/project 1 _ games.ipynb
+++ b/project 1 _ games.ipynb
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "3BznlR1UjwxR"
       },
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "Ds6ubgjlj-mW"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +108,7 @@
         "id": "X7VVjWYJkH7s",
         "outputId": "9f1f66d9-1901-44e7-a275-8b4726872161"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,7 +146,7 @@
         "id": "eekUgr2u7o5L",
         "outputId": "7e7d01e6-bc53-425a-9788-34817b8721cc"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -188,7 +188,7 @@
       "metadata": {
         "id": "eRtezZLqXmap"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -198,13 +198,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Vfadj4gDVg9u",
         "outputId": "fcb057c0-7286-417d-e978-6dc7f798978a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1153,13 +1152,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "lr5XrAn6V7b6",
         "outputId": "4eb6ebef-fe21-462e-af45-08edd9e74fb5"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1349,7 +1347,7 @@
       "metadata": {
         "id": "axeFvq-U714R"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1360,7 +1358,7 @@
       "metadata": {
         "id": "A6qJL0oZ9ras"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1375,7 +1373,7 @@
         "id": "cSV7Yqz5-OuN",
         "outputId": "1de24667-abdd-4de6-d49c-a9538ebe8154"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1422,7 +1420,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1467,7 +1465,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1501,7 +1499,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1539,7 +1537,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1565,11 +1563,10 @@
         "id": "7AW-BwAWSUal",
         "outputId": "6ac87f23-875d-4b88-ab71-640e26f642e5",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2274,7 +2271,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2299,11 +2296,10 @@
         "id": "i2ZmkLZTrWml",
         "outputId": "48d70cf0-3ef4-47ce-e6e6-02ced71b04ae",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2997,7 +2993,7 @@
       "metadata": {
         "id": "dpkyjLxGlBa2"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3009,7 +3005,7 @@
       "metadata": {
         "id": "MJm0p2wP5qUc"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3020,13 +3016,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Ahqdi5h0bkS8",
         "outputId": "9f42a9fb-05a0-4494-ff75-80c6d9a71c89"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3199,7 +3194,7 @@
       "metadata": {
         "id": "Qh8y5NwAfrsz"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3212,7 +3207,7 @@
       "metadata": {
         "id": "fhpXmtw8fJ5b"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3227,7 +3222,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3265,7 +3260,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3294,7 +3289,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3322,7 +3317,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3513,7 +3508,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3547,7 +3542,7 @@
       "metadata": {
         "id": "I0gDpVb0n_k-"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3562,7 +3557,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3597,7 +3592,7 @@
       "metadata": {
         "id": "l5fCZc7dQQxg"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3613,7 +3608,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3647,7 +3642,7 @@
       "metadata": {
         "id": "buHlz6XBndJY"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3662,7 +3657,7 @@
         "id": "5Zq3l-eYrC4f",
         "outputId": "314510e4-123c-4851-cb74-9e3e8c12a645"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3686,7 +3681,7 @@
       "metadata": {
         "id": "KuQIuItjnjv9"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3697,7 +3692,7 @@
       "metadata": {
         "id": "LkeGJtGpZAix"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3713,7 +3708,7 @@
           "height": 1000
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4112,7 +4107,7 @@
       "metadata": {
         "id": "aOLFxOSDrxhb"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4126,7 +4121,7 @@
       "metadata": {
         "id": "EBuW8EOCt6Xj"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4140,7 +4135,7 @@
       "metadata": {
         "id": "bf3NdBBZuU7H"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4154,7 +4149,7 @@
       "metadata": {
         "id": "-2rYk97FvnF7"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4175,7 +4170,7 @@
       "metadata": {
         "id": "PBWYwZv5wNWC"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4192,7 +4187,7 @@
       "metadata": {
         "id": "Ge0GwEvvw368"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4208,7 +4203,7 @@
         "id": "3uQXjIhbxQYP",
         "outputId": "14dc55ba-2682-4a1b-d38a-5b759cd60274"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4458,7 +4453,7 @@
       "metadata": {
         "id": "i6z3sCkeJFCF"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4487,7 +4482,7 @@
           "height": 432
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4534,7 +4529,7 @@
         },
         "outputId": "fbb495cf-3879-41bd-9886-b436eb76ab09"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4589,7 +4584,7 @@
           "height": 740
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4620,7 +4615,7 @@
       "metadata": {
         "id": "AlUmQtDjxDn9"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4631,7 +4626,7 @@
       "metadata": {
         "id": "zDNbGXtLDvFX"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4659,7 +4654,7 @@
           "height": 504
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
