--- a/CP1_DS.ipynb
+++ b/CP1_DS.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "KbtC2aiCia6R"
       ],
-      "authorship_tag": "ABX9TyNDTP+vAAexdJeCX/ubr2GY",
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
         "✅ 기준 4. (데이터 분리)\n",
         "AI 모델을 구현하기 위해서는 데이터에 대한 정제(분리)작업이 요구됩니다. 이를 수행하기 위한 프로세스를 이해하고 있으며, 코드로 구현할 수 있다.\n",
         "\n",
-        "<br>\n",
+        "----\n",
         "\n"
       ],
       "metadata": {
@@ -75,11 +75,12 @@
         "\n",
         "**✅ 순전파와 성능 평가( ※ 정확도, 손실 )만 수행 가능하도록 프로그래밍 합니다. 역전파는 제외합니다.**\n",
         "\n",
-        "💡 `필수 기능 목록`\n",
+        "------\n",
         "\n",
-        "---\n",
+        "💡 **`필수 기능 목록`**\n",
         "\n",
-        "- **전체 기능의 동작 기능**\n",
+        "\n",
+        "- 전체 기능의 동작 기능\n",
         "\n",
         "```python\n",
         "# 예시) **전체 기능의 동작 메서드 정의**\n",
@@ -105,6 +106,16 @@
       ],
       "metadata": {
         "id": "X_wfY_zgFKgI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "----\n",
+        "----"
+      ],
+      "metadata": {
+        "id": "qWHOAjJ9XQ5d"
       }
     },
     {
@@ -328,7 +339,7 @@
         "id": "Iydpdb5WqxGP",
         "outputId": "0a2d2352-2ee7-42d7-d518-d2c91dcddef5"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -469,7 +480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
         "id": "uCZcS3QZEDuo"
       },
@@ -488,12 +499,12 @@
     {
       "cell_type": "code",
       "source": [
-        "\"\"\"\n",
-        "데이터 로컬에 저장\n",
-        "param : url (데이터 링크), file_name (로컬에 저장될 파일명)\n",
-        "return : 없음\n",
-        "\"\"\"\n",
         "def data_save(url = \"https://drive.google.com/uc?export=download&id=1SCO0ZGL_EDGWc9Le0JFDw9eww86xk1xJ\", file_name = \"datafile.csv\") :\n",
+        "  \"\"\"\n",
+        "  데이터 로컬에 저장\n",
+        "  param : url (데이터 링크), file_name (로컬에 저장될 파일명)\n",
+        "  return : 없음\n",
+        "  \"\"\"\n",
         "  try:\n",
         "    # 링크에서 읽어오기\n",
         "    r = requests.get(url).content\n",
@@ -505,12 +516,12 @@
         "  f.write(r)\n",
         "  f.close()\n",
         "\n",
-        "\"\"\"\n",
-        "로컬에 저장한 데이터 로드\n",
-        "param : file_path (로컬에서 로드할 파일 경로)\n",
-        "return : 판다스 데이터프레임\n",
-        "\"\"\"\n",
         "def data_load(file_path = \"/content/datafile.csv\") :\n",
+        "  \"\"\"\n",
+        "  로컬에 저장한 데이터 로드\n",
+        "  param : file_path (로컬에서 로드할 파일 경로)\n",
+        "  return : 판다스 데이터프레임\n",
+        "  \"\"\"\n",
         "  # 1. 코랩에 드라이브 마운트로 불러오기\n",
         "  # from google.colab import drive\n",
         "  # drive.mount('/content/drive')\n",
@@ -524,12 +535,12 @@
         "  # 3. 로컬에 저장한 데이터 불러오기\n",
         "  return pd.read_csv(file_path)\n",
         "\n",
-        "\"\"\"                                                                                                                                                                                                                                                             \n",
-        "사비에르 초기화로 파라미터, 편향 생성\n",
-        "param : input_dimension (이전층 노드 개수), my_dimension (현재층 노드 개수)\n",
-        "return : 초기화된 weights, bias 행렬\n",
-        "\"\"\"\n",
         "def initialization_parameter(input_dimension, my_dimension) :\n",
+        "  \"\"\"                                                                                                                                                                                                                                                             \n",
+        "  사비에르 초기화로 파라미터, 편향 생성\n",
+        "  param : input_dimension (이전층 노드 개수), my_dimension (현재층 노드 개수)\n",
+        "  return : 초기화된 weights, bias 행렬\n",
+        "  \"\"\"\n",
         "  # Xavier initialization\n",
         "  # 평균 = 0, 표준편차 = 2/sqrt(n+m), (n = 이전층 노드 개수, m = 현재층 노드 개수) 정규분포에서 랜덤 선택\n",
         "  weights = np.random.normal(0, 2/((input_dimension+my_dimension)**0.5), size=[input_dimension, my_dimension])\n",
@@ -537,87 +548,99 @@
         "  bias = np.random.normal(0, 2/((input_dimension+my_dimension)**0.5), size = [my_dimension]) # 가중치와 동일한 사비에르 초기화를 편향의 기본값으로 주었음\n",
         "  return weights, bias\n",
         "\n",
-        "\"\"\"\n",
-        "데이터 뒤섞기\n",
-        "데이터를 학습하는 과정에서 해당 데이터의 순서에 의존하지 않고 임의의 데이터가 입력되는 것으로 간주하기 위함이다.\n",
-        "param : df (데이터 프레임)\n",
-        "return : 섞인 데이터\n",
-        "\"\"\"\n",
         "def data_randmix(df) :\n",
+        "  \"\"\"\n",
+        "  데이터 뒤섞기\n",
+        "  데이터를 학습하는 과정에서 해당 데이터의 순서에 의존하지 않고 임의의 데이터가 입력되는 것으로 간주하기 위함이다.\n",
+        "  param : df (데이터 프레임)\n",
+        "  return : 섞인 데이터\n",
+        "  \"\"\"\n",
         "  return df.sample(frac=1).reset_index(drop=True)\n",
         "\n",
-        "\"\"\"\n",
-        "X,y 데이터 분리\n",
-        "주어진 데이터 셋에 맞춘 함수\n",
-        "param : df (데이터 프레임)\n",
-        "return : X, y\n",
-        "\"\"\"\n",
         "def split_target_data(df) :\n",
+        "  \"\"\"\n",
+        "  X,y 데이터 분리\n",
+        "  주어진 데이터 셋에 맞춘 함수\n",
+        "  param : df (데이터 프레임)\n",
+        "  return : X, y\n",
+        "  \"\"\"\n",
         "  return df.iloc[:,range(8)], df['y']\n",
         "\n",
-        "\"\"\"\n",
-        "셔플 없이 비율대로 앞뒤로 잘라서 train, test 데이터 분리\n",
-        "param : df (데이터프레임), test_ratio (테스트셋 비율)\n",
-        "return : train, test\n",
-        "\"\"\"\n",
         "def split_train_test_data(df, test_ratio) :\n",
+        "  \"\"\"\n",
+        "  셔플 없이 비율대로 앞뒤로 잘라서 train, test 데이터 분리\n",
+        "  param : df (데이터프레임), test_ratio (테스트셋 비율)\n",
+        "  return : train, test\n",
+        "  \"\"\"\n",
         "  n = int(len(df)*(1-test_ratio))\n",
         "  return df[:n], df[n:]\n",
         "\n",
-        "\"\"\"\n",
-        "미니배치\n",
-        "인덱스 넘버로 미니배치를 구현. 에포크마다 랜덤 추출 되도록 인덱스를 섞어서 제너레이터로 데이터 반환\n",
-        "param : df (데이터프레임), size (미니배치 크기)\n",
-        "return : 미니배치 데이터프레임 제너레이터\n",
-        "\"\"\"\n",
+        "\n",
         "def mini_batch(df, size) :\n",
+        "  \"\"\"\n",
+        "  미니배치\n",
+        "  인덱스 넘버로 미니배치를 구현. 에포크마다 랜덤 추출 되도록 인덱스를 섞어서 제너레이터로 데이터 반환\n",
+        "  param : df (데이터프레임), size (미니배치 크기)\n",
+        "  return : 미니배치 데이터프레임 제너레이터\n",
+        "  \"\"\"\n",
         "  index_list = list(df.index)\n",
         "  random.shuffle(index_list)\n",
         "  for i in range(0,len(index_list),size) :\n",
         "    ind = index_list[i:i+size]\n",
         "    yield split_target_data(df.loc[ind])\n",
         "\n",
-        "\"\"\"\n",
-        "시그모이드\n",
-        "param : x\n",
-        "return : 시그모이드 통과값\n",
-        "\"\"\"\n",
         "def sigmoid(x) :\n",
+        "  \"\"\"\n",
+        "  시그모이드\n",
+        "  param : x\n",
+        "  return : 시그모이드 통과값\n",
+        "  \"\"\"\n",
         "  return 1/(1+np.e**(-x))\n",
         "\n",
-        "\"\"\"\n",
-        "데이터 하나가 들어왔을 때 신경망 한층 연산\n",
-        "param : input_data (단일 데이터), weights, bias\n",
-        "return : 연산 결과 np 행렬\n",
-        "\"\"\"\n",
         "def forward_prop(input_data, weights, bias) :\n",
+        "  \"\"\"\n",
+        "  데이터 하나가 들어왔을 때 신경망 한층 연산\n",
+        "  param : input_data (단일 데이터), weights, bias\n",
+        "  return : 연산 결과 np 행렬\n",
+        "  \"\"\"\n",
         "  cal = input_data.dot(weights) + bias # 순전파 행렬 연산\n",
         "  sig_cal = sigmoid(cal) # 활성화함수 : 시그모이드\n",
         "  return np.array(sig_cal)\n",
         "\n",
-        "\"\"\"\n",
-        "배치별 손실(이진 교차 엔트로피)값 연산\n",
-        "param : sig_cal (배치 1개의 모델 최종 output 행렬), y (배치 1개의 타겟값)\n",
-        "return : 배치의 평균 이진 교차 엔트로피\n",
-        "\"\"\"\n",
         "def cal_lost(sig_cal, y) :\n",
+        "  \"\"\"\n",
+        "  배치별 손실(이진 교차 엔트로피)값 연산\n",
+        "  param : sig_cal (배치 1개의 모델 최종 output 행렬), y (배치 1개의 타겟값)\n",
+        "  return : 배치의 평균 이진 교차 엔트로피\n",
+        "  \"\"\"\n",
         "  return -sum([y*np.log(p)+(1-y)*np.log(1-p) for p,y in zip(sig_cal, y)])[0] / len(y) # 평균 이진 교차 엔트로피 연산\n",
         "\n",
-        "\"\"\"\n",
-        "배치별 평균 정확도 연산\n",
-        "param : sig_cal (배치 1개의 모델 최종 output 행렬), y (배치 1개의 타겟값), threshold (임계값)\n",
-        "return : 배치의 평균 정확도\n",
-        "\"\"\"\n",
         "def accuracy(sig_cal, y, threshold = 0.5) :\n",
+        "  \"\"\"\n",
+        "  배치별 평균 정확도 연산\n",
+        "  param : sig_cal (배치 1개의 모델 최종 output 행렬), y (배치 1개의 타겟값), threshold (임계값)\n",
+        "  return : 배치의 평균 정확도\n",
+        "  \"\"\"\n",
         "  pred = [1 if i>=threshold else 0 for i in sig_cal]\n",
         "  acc = [1 if p==y else 0 for p,y in zip(pred, y)]\n",
         "  return sum(acc)/len(acc)\n",
         "\n",
-        "\"\"\"\n",
-        "모델 클래스 구현\n",
-        "\"\"\"\n",
         "class model :\n",
-        "  def __init__(self, input_dim) : # 데이터를 넣는다\n",
+        "  \"\"\"\n",
+        "  모델 클래스\n",
+        "  param : input_dim (input 데이터의 차원)\n",
+        "  \"\"\"\n",
+        "  def __init__(self, input_dim) :\n",
+        "    \"\"\"\n",
+        "    내장 변수\n",
+        "    weights : 레이어들 가중치\n",
+        "    bias : 레이어들 편향\n",
+        "    dim : 레이어들 차원\n",
+        "    fin_dim : 출력 차원\n",
+        "    forward_prop_by_batch : 배치별 순전파 결과값\n",
+        "    loss_by_batch : 배치별 loss 값\n",
+        "    acc_by_batch : 배치별 accuracy 값\n",
+        "    \"\"\"\n",
         "    self.weights = [] # 레이어들 가중치\n",
         "    self.bias = [] # 레이어들 편향\n",
         "    self.dim = [input_dim] # 레이어들 차원\n",
@@ -627,12 +650,12 @@
         "    self.loss_by_batch = [] # 배치별 loss 값\n",
         "    self.acc_by_batch = [] # 배치별 accuracy 값\n",
         "\n",
-        "  \"\"\"\n",
-        "  모델의 맨 끝에 out_dim 차원의 dense layor 를 추가한다. 초기화된 파라미터 행렬을 저장한다.\n",
-        "  param : out_dim (추가하려는 dense layor 의 차원)\n",
-        "  return : 없음\n",
-        "  \"\"\"\n",
         "  def add_dense_layor(self, out_dim) :\n",
+        "    \"\"\"\n",
+        "    모델의 맨 끝에 out_dim 차원의 dense layor 를 추가한다. 초기화된 파라미터 행렬을 저장한다.\n",
+        "    param : out_dim (추가하려는 dense layor 의 차원)\n",
+        "    return : 없음\n",
+        "    \"\"\"\n",
         "    in_dim = self.fin_dim # 현재 모델의 마지막 차원을 input 차원으로 설정\n",
         "    w,b = initialization_parameter(in_dim, out_dim) # 파라미터 초기화\n",
         "    self.weights.append(w) # 파라미터 저장\n",
@@ -640,12 +663,12 @@
         "    self.dim.append(out_dim) # 차원값 저장\n",
         "    self.fin_dim = out_dim # 현재 모델의 마지막 차원값 재설정\n",
         "\n",
-        "  \"\"\"\n",
-        "  미니배치를 받아서 순전파 진행, 배치별 순전파 결과와 loss, accuracy 저장\n",
-        "  param : batch (미니배치 제너레이터)\n",
-        "  return : 없음\n",
-        "  \"\"\"\n",
         "  def forward_propagation(self, batch) :\n",
+        "    \"\"\"\n",
+        "    미니배치를 받아서 순전파 진행, 배치별 순전파 결과와 loss, accuracy 저장\n",
+        "    param : batch (미니배치 제너레이터)\n",
+        "    return : 없음\n",
+        "    \"\"\"\n",
         "    # 초기화\n",
         "    self.forward_prop_by_batch = []\n",
         "    self.loss_by_batch = []\n",
@@ -667,7 +690,7 @@
       "metadata": {
         "id": "JwzBsk0fEX1S"
       },
-      "execution_count": 74,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -709,7 +732,7 @@
       "metadata": {
         "id": "yZKlVvtcedun"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -724,7 +747,7 @@
         "id": "uxI_ugak_FdA",
         "outputId": "f90a617a-c963-4dad-db16-5eec805095dc"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -754,7 +777,7 @@
       "metadata": {
         "id": "7oOzSzbfyiLK"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -766,7 +789,7 @@
       "metadata": {
         "id": "Z5t_tXHzy1av"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -788,7 +811,7 @@
         "id": "2r4EwgWJxFZM",
         "outputId": "98e6314c-4614-4a74-cae0-c47a3691d938"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -817,7 +840,7 @@
         "id": "8fhZ7gs_W8ff",
         "outputId": "d0589c24-20ea-418b-fe67-59fc988f306a"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -856,7 +879,7 @@
       "metadata": {
         "id": "5Nrluz3UXVfb"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -872,7 +895,7 @@
         "id": "jNYW0OAenx40",
         "outputId": "c7d8ca12-3148-4537-fbb5-a3c6ebef8cc2"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -911,7 +934,7 @@
         "id": "HSBy64TZo9Ek",
         "outputId": "30781f99-b05e-42df-ed26-6576a3cc0eaf"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -941,7 +964,7 @@
         "id": "UQhb3RVQqO2y",
         "outputId": "d3441621-4711-45cd-870b-7690bb7d249c"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
