--- a/CP1_DS.ipynb
+++ b/CP1_DS.ipynb
@@ -7,7 +7,6 @@
       "collapsed_sections": [
         "KbtC2aiCia6R"
       ],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -310,6 +309,7 @@
       "source": [
         "# sigmoid 그래프 출력\n",
         "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
         "\n",
         "def sigmoid(x) :\n",
         "  return 1/(1+np.e**(-x))\n",
@@ -337,9 +337,9 @@
           "height": 360
         },
         "id": "Iydpdb5WqxGP",
-        "outputId": "0a2d2352-2ee7-42d7-d518-d2c91dcddef5"
+        "outputId": "daabaa89-8878-4acf-a16c-9c6a8b295fc9"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -480,7 +480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "uCZcS3QZEDuo"
       },
@@ -613,7 +613,7 @@
         "  param : sig_cal (배치 1개의 모델 최종 output 행렬), y (배치 1개의 타겟값)\n",
         "  return : 배치의 평균 이진 교차 엔트로피\n",
         "  \"\"\"\n",
-        "  return -sum([y*np.log(p)+(1-y)*np.log(1-p) for p,y in zip(sig_cal, y)])[0] / len(y) # 평균 이진 교차 엔트로피 연산\n",
+        "  return -sum([y*np.log(p)+(1-y)*np.log(1-p) for p,y in zip(sig_cal, y)]) / len(y) # 평균 이진 교차 엔트로피 연산\n",
         "\n",
         "def accuracy(sig_cal, y, threshold = 0.5) :\n",
         "  \"\"\"\n",
@@ -690,7 +690,7 @@
       "metadata": {
         "id": "JwzBsk0fEX1S"
       },
-      "execution_count": 15,
+      "execution_count": 141,
       "outputs": []
     },
     {
@@ -732,7 +732,7 @@
       "metadata": {
         "id": "yZKlVvtcedun"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -745,15 +745,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uxI_ugak_FdA",
-        "outputId": "f90a617a-c963-4dad-db16-5eec805095dc"
+        "outputId": "be3137d6-2e5d-4952-bc27-46c5e4e16f66"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[Epoch 1] TrainData - Loss = 0.561, Accuracy = 0.812\n"
+            "[Epoch 1] TrainData - Loss = 0.633, Accuracy = 0.750\n"
           ]
         }
       ]
@@ -777,7 +777,7 @@
       "metadata": {
         "id": "7oOzSzbfyiLK"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -789,7 +789,7 @@
       "metadata": {
         "id": "Z5t_tXHzy1av"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -809,9 +809,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2r4EwgWJxFZM",
-        "outputId": "98e6314c-4614-4a74-cae0-c47a3691d938"
+        "outputId": "70ee4ff5-844d-4f16-a83f-852e04936327"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -838,34 +838,34 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8fhZ7gs_W8ff",
-        "outputId": "d0589c24-20ea-418b-fe67-59fc988f306a"
+        "outputId": "e195fcf0-195b-489d-e69b-9cf6c7b60ecf"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[array([[-0.0624373 ,  0.21144408, -0.51316326, -0.00730755,  0.17549027],\n",
-            "       [ 0.42266457,  0.60803767,  1.37887387,  0.41218616,  0.42788378],\n",
-            "       [ 1.2083902 ,  0.41822076,  0.33767679, -0.55455983,  0.57848539],\n",
-            "       [ 1.13269375,  0.88756417, -0.07258875,  0.3147362 , -0.3658649 ],\n",
-            "       [-0.0420744 ,  0.11420854,  0.27501791, -0.30473485, -0.16001579],\n",
-            "       [-0.1738317 ,  0.68389872, -0.19882944, -0.46951892, -0.2294064 ],\n",
-            "       [-0.08853501,  0.11270059,  0.55528797,  0.33185623,  0.74927468],\n",
-            "       [ 1.02563802, -0.11683089,  0.50555833,  0.21167867, -0.01656367]]),\n",
-            " array([[ 0.78665247, -0.90418088, -0.67058383],\n",
-            "       [ 0.59323721, -1.35294556, -0.96112609],\n",
-            "       [ 0.08263945, -0.33905935, -0.3287333 ],\n",
-            "       [ 0.29251962, -0.07253222,  0.31101287],\n",
-            "       [-0.5343006 ,  0.20631344, -1.31891327]]),\n",
-            " array([[-0.24257115],\n",
-            "       [ 1.23994745],\n",
-            "       [ 0.11580019]])]\n",
+            "[array([[-0.89588532,  0.20655014,  0.17696995, -0.34273602, -0.37551267],\n",
+            "       [ 0.02302267, -0.5123159 , -0.0898387 , -0.58423197,  0.7601841 ],\n",
+            "       [-0.459266  , -0.35591294,  0.61048443,  0.22402774,  0.03122181],\n",
+            "       [-0.59525779, -0.70536881,  0.17355886,  0.0585131 , -0.22545386],\n",
+            "       [ 0.50618346,  0.70719695,  0.66639   ,  0.77361093,  0.03508374],\n",
+            "       [-0.16656981, -0.03126193, -0.35972971,  0.08330436, -0.83898354],\n",
+            "       [-0.10377651, -0.80208793, -0.11921333, -0.53845034,  0.38461261],\n",
+            "       [ 0.43169328,  0.72136727, -0.58622221,  0.06093837, -0.29057433]]),\n",
+            " array([[-0.51579467,  0.3208313 , -0.78738481],\n",
+            "       [ 0.10205872, -0.10447638,  0.09747234],\n",
+            "       [-0.10019504, -0.55297523, -0.12912958],\n",
+            "       [ 0.16971592,  0.56727771, -0.0845642 ],\n",
+            "       [-0.54867347, -1.28134594,  0.22716443]]),\n",
+            " array([[ 1.35694201],\n",
+            "       [ 0.01249489],\n",
+            "       [-0.26537024]])]\n",
             "\n",
-            "[array([ 0.3892911 ,  0.25810378, -0.03786932, -0.55784887, -0.92637121]),\n",
-            " array([-0.13793832,  0.55659692, -0.44669045]),\n",
-            " array([-0.06520186])]\n"
+            "[array([-0.17036905, -0.77715858, -0.53094149, -0.61305313,  0.50325369]),\n",
+            " array([-0.51396015, -0.47042683,  1.21394427]),\n",
+            " array([-1.35369503])]\n"
           ]
         }
       ]
@@ -879,7 +879,7 @@
       "metadata": {
         "id": "5Nrluz3UXVfb"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -893,30 +893,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jNYW0OAenx40",
-        "outputId": "c7d8ca12-3148-4537-fbb5-a3c6ebef8cc2"
+        "outputId": "d07075b8-218d-48a9-f817-1a3c26ee3bcc"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[array([[0.47945945],\n",
-            "       [0.47945945],\n",
-            "       [0.47945945],\n",
-            "       [0.47389317]]),\n",
-            " array([[0.47389317],\n",
-            "       [0.47945945],\n",
-            "       [0.47947306],\n",
-            "       [0.47945945]]),\n",
-            " array([[0.47945945],\n",
-            "       [0.47945945],\n",
-            "       [0.47945945],\n",
-            "       [0.48550405]]),\n",
-            " array([[0.47945945],\n",
-            "       [0.56627657],\n",
-            "       [0.48708812],\n",
-            "       [0.47953393]])]\n"
+            "[array([[0.26550317],\n",
+            "       [0.26550317],\n",
+            "       [0.26291824],\n",
+            "       [0.27196154]]),\n",
+            " array([[0.25024364],\n",
+            "       [0.26012987],\n",
+            "       [0.26550285],\n",
+            "       [0.26550317]]),\n",
+            " array([[0.2601307 ],\n",
+            "       [0.26550316],\n",
+            "       [0.26550317],\n",
+            "       [0.26550317]]),\n",
+            " array([[0.26013026],\n",
+            "       [0.26550317],\n",
+            "       [0.26550317],\n",
+            "       [0.26550317]])]\n"
           ]
         }
       ]
@@ -932,22 +932,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HSBy64TZo9Ek",
-        "outputId": "30781f99-b05e-42df-ed26-6576a3cc0eaf"
+        "outputId": "1e485566-7a0f-4d8b-c956-2fb4755cf600"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.6969110728969694,\n",
-              " 0.6969039748605061,\n",
-              " 0.6703075215747947,\n",
-              " 0.7022293745661763]"
+              "[0.5560725618875453,\n",
+              " 0.8303250444770617,\n",
+              " 0.5680699683084274,\n",
+              " 0.5611372105350352]"
             ]
           },
           "metadata": {},
-          "execution_count": 83
+          "execution_count": 13
         }
       ]
     },
@@ -962,19 +962,275 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UQhb3RVQqO2y",
-        "outputId": "d3441621-4711-45cd-870b-7690bb7d249c"
+        "outputId": "f2725572-58a6-462a-d3e8-a1325721c1c5"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.5, 0.5, 0.75, 0.75]"
+              "[0.75, 0.5, 0.75, 0.75]"
             ]
           },
           "metadata": {},
-          "execution_count": 84
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 역전파 구현"
+      ],
+      "metadata": {
+        "id": "7AgAZ-06-n2l"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class dense :\n",
+        "  def __init__(self, in_dim, out_dim) :\n",
+        "    self.W , self.b = initialization_parameter(in_dim, out_dim)\n",
+        "    self.dW = None # \n",
+        "    self.db = None\n",
+        "    self.x = None # input data\n",
+        "  \n",
+        "  def forward(self, x) :\n",
+        "    self.x = x\n",
+        "    out = np.dot(x,self.W) + self.b\n",
+        "    return out\n",
+        "\n",
+        "  def backward(self, dout, learning_rate) : # dout : 직전 역전파 결과물\n",
+        "    dx = np.dot(dout,self.W.T)\n",
+        "    self.dW = np.dot(self.x.T, dout)\n",
+        "    #self.db = np.sum(dout, axis = 0)\n",
+        "    self.W -= learning_rate * self.dW\n",
+        "    #self.b -= learning_rate * self.db\n",
+        "    \n",
+        "    return dx\n",
+        "\n",
+        "class sigmoid :\n",
+        "  def __init__(self) :\n",
+        "    self.out = None\n",
+        "\n",
+        "  def forward(self, x) :\n",
+        "    out = 1/(1+np.exp(-x))\n",
+        "    self.out = out\n",
+        "    return out\n",
+        "  \n",
+        "  def backward(self, dout, learning_rate) :\n",
+        "    dx = dout*(1.0-self.out)*self.out\n",
+        "\n",
+        "    return dx\n",
+        "\n",
+        "class model_with_back :\n",
+        "  def __init__(self, input_dim) :\n",
+        "    self.layers_info = [('input',input_dim)] # 레이어들 차원\n",
+        "    self.fin_dim = input_dim # 마지막 차원\n",
+        "    self.layers = []\n",
+        "    self.y = None\n",
+        "    self.t = None\n",
+        "    self.loss = None\n",
+        "  \n",
+        "  def add_dense_layer(self, out_dim) :\n",
+        "    self.layers.append(dense(self.fin_dim, out_dim))\n",
+        "    print(f\"dense layer added : input dim = {self.fin_dim}, output dim = {out_dim}\")\n",
+        "    self.layers_info.append(('dense',out_dim))\n",
+        "    self.fin_dim = out_dim\n",
+        "\n",
+        "  def add_sigmoid_layer(self) :\n",
+        "    self.layers.append(sigmoid())\n",
+        "    print(f\"sigmoid layer added\")\n",
+        "    self.layers_info.append(('sigmoid',self.fin_dim))\n",
+        "  \n",
+        "  def forward_pass(self, x) :\n",
+        "    for layer in self.layers :\n",
+        "      x = layer.forward(x)\n",
+        "    self.y = x\n",
+        "    #print(self.y)\n",
+        "    return x\n",
+        "  \n",
+        "  def find_loss(self, t) :\n",
+        "    if not self.y.all() :\n",
+        "      print(\"Error : need forward_pass\")\n",
+        "      return\n",
+        "    self.loss = cal_lost(self.y, t)\n",
+        "    self.t = t\n",
+        "    return self.loss\n",
+        "\n",
+        "  def acc(self, t) :\n",
+        "    if not self.y.all() :\n",
+        "      print(\"Error : need forward_pass\")\n",
+        "      return\n",
+        "    return accuracy(self.y,t)\n",
+        "\n",
+        "  def back_prop(self, t, learning_rate) :\n",
+        "    dout = 1\n",
+        "\n",
+        "    for layer in self.layers[::-1] :\n",
+        "      dout = layer.backward(dout, learning_rate)\n",
+        "\n",
+        "  # def backward(self, dout=1):\n",
+        "  #     batch_size = self.shape[0]\n",
+        "  #     dx = (self.y - self.t) / batch_size\n",
+        "      \n",
+        "  #     return dx\n"
+      ],
+      "metadata": {
+        "id": "zR5MeQCsK41o"
+      },
+      "execution_count": 198,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 데이터 다운하여 저장 및 로드\n",
+        "data_save(url = \"https://drive.google.com/uc?export=download&id=1SCO0ZGL_EDGWc9Le0JFDw9eww86xk1xJ\", file_name = \"datafile.csv\")\n",
+        "df = data_load(file_path = \"/content/datafile.csv\")\n",
+        "\n",
+        "# 데이터 섞기\n",
+        "df = data_randmix(df)\n",
+        "\n",
+        "# train, test 데이터 분리\n",
+        "train, test = split_train_test_data(df, 0.2)\n",
+        "\n",
+        "# split\n",
+        "X_train, y_train = split_target_data(train)\n",
+        "\n",
+        "# 데이터 정규화\n",
+        "X_train = (X_train - X_train.min())/(X_train.max() - X_train.min())"
+      ],
+      "metadata": {
+        "id": "ivudHr_-UaRS"
+      },
+      "execution_count": 107,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 모델 만들기\n",
+        "M = model_with_back(8)\n",
+        "# M.add_dense_layer(5)\n",
+        "# M.add_sigmoid_layer()\n",
+        "# M.add_dense_layer(3)\n",
+        "# M.add_sigmoid_layer()\n",
+        "M.add_dense_layer(1)\n",
+        "M.add_sigmoid_layer()"
+      ],
+      "metadata": {
+        "id": "UBz_bnwaWCJs",
+        "outputId": "b8211913-b87c-442f-e859-2a753550e35f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 201,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dense layer added : input dim = 8, output dim = 1\n",
+            "sigmoid layer added\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "M.layers_info"
+      ],
+      "metadata": {
+        "id": "7ePojggZWV3L"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "M.layers"
+      ],
+      "metadata": {
+        "id": "n0szgG4iWaj7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "M.forward_pass(X_train)\n",
+        "M.find_loss(y_train)"
+      ],
+      "metadata": {
+        "id": "h0QQgV4Ld7l-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "M.y"
+      ],
+      "metadata": {
+        "id": "JZfTztGgeLdm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(100) :\n",
+        "  M.forward_pass(X_train)\n",
+        "  if i%50 == 0 :\n",
+        "    print(M.find_loss(y_train))\n",
+        "    print(M.acc(y_train))\n",
+        "  else : M.find_loss(y_train)\n",
+        "  M.back_prop(y_train, 0.005)\n",
+        "print(M.y)"
+      ],
+      "metadata": {
+        "id": "XHsMOu5TWqge",
+        "outputId": "635cf2d4-f55d-46c9-e975-b8a4f870301b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 202,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.80327565]\n",
+            "0.3125\n",
+            "[0.54009862]\n",
+            "0.75\n",
+            "[[0.16693636]\n",
+            " [0.11122453]\n",
+            " [0.26897674]\n",
+            " [0.06939911]\n",
+            " [0.26469829]\n",
+            " [0.02763694]\n",
+            " [0.27803207]\n",
+            " [0.24063049]\n",
+            " [0.2303292 ]\n",
+            " [0.05420596]\n",
+            " [0.15401551]\n",
+            " [0.15773727]\n",
+            " [0.15941353]\n",
+            " [0.10796752]\n",
+            " [0.11322169]\n",
+            " [0.15607986]]\n"
+          ]
         }
       ]
     }
