Colaboratory를 통해 생성됨

--- a/CP1_DS.ipynb
+++ b/CP1_DS.ipynb
@@ -40,7 +40,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "https://codestates.notion.site/DS-0-1-b80db8870b4b41b39425ec5c625eb54d\n",
         "\n",
         "✅ 기준 1. (프로그램 설명 능력)  \n",
         "개발한 프로그램을 기준으로 전체 파이프라인이 시각적으로 표현되어 있으며, 글을 통한 충분한 설명이 포함되어 있다.\n",
@@ -79,19 +78,7 @@
         "💡 **`필수 기능 목록`**\n",
         "\n",
         "\n",
-        "- 전체 기능의 동작 기능\n",
-        "\n",
-        "```python\n",
-        "# 예시) **전체 기능의 동작 메서드 정의**\n",
-        "def main():\n",
-        "\n",
-        "\t\t# 예시) 데이터 불러오기 기능\n",
-        "\t\tdata_load()\n",
-        "\t\t# 예시) 파라미터와 편향 생성 기능\n",
-        "\t\tinitialization_parameter()\n",
-        "\t\t# ...\n",
-        "\t\t...()\n",
-        "```\n",
+        "- **전체 기능의 동작 기능** `main()`\n",
         "\n",
         "- **데이터 불러오기 기능**\n",
         "- **파라미터와 편향 생성 기능**\n",
@@ -750,7 +737,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "uxI_ugak_FdA",
         "outputId": "1a8e4ac8-8491-41fb-871d-2ee5c34c2282"
@@ -814,7 +802,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "2r4EwgWJxFZM",
         "outputId": "177dc915-52c4-4a1f-c01e-88159075417d"
@@ -843,7 +832,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "8fhZ7gs_W8ff",
         "outputId": "1a0727da-719d-4f45-f604-4ef0e067c424"
@@ -898,7 +888,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "jNYW0OAenx40",
         "outputId": "67ee99c7-c6b2-4293-e3b8-f0c5d41dfbe0"
@@ -937,7 +928,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "HSBy64TZo9Ek",
         "outputId": "dbda4913-f5e9-47d9-c25d-68cd4105e55e"
@@ -967,7 +959,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "UQhb3RVQqO2y",
         "outputId": "dd5330b1-0a12-45bb-c447-0dbd3945e991"
@@ -1074,7 +1067,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "dense 레이어의 역전파 학습은 현재 층의 input 값, 다음 층에서 받아올 수 있는 역전파 연산값의 행렬곱으로 표현할 수 있다."
+        "dense 레이어의 역전파 학습은 현재 층의 input 값, 직전 역전파 층에서 받아올 수 있는 역전파 연산값의 행렬곱으로 표현할 수 있다."
       ],
       "metadata": {
         "id": "Ykx7Gunamg-r"
@@ -1385,11 +1378,12 @@
         "main()"
       ],
       "metadata": {
-        "id": "_xqSG1pXGK2I",
-        "outputId": "3c00ac6d-f798-418b-923f-23a1820bf613",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "id": "_xqSG1pXGK2I",
+        "outputId": "3c00ac6d-f798-418b-923f-23a1820bf613"
       },
       "execution_count": 152,
       "outputs": [
